--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.3",
-    "@iconify-json/tabler": "^1.2.10",
-    "astro": "^5.0.3",
-    "astro-icon": "^1.1.4",
-    "tailwindcss": "^3.4.16"
+    "@astrojs/alpinejs": "^0.4.3",
+    "@iconify-json/lucide": "^1.2.32",
+    "@tailwindcss/vite": "^4.0.15",
+    "@types/alpinejs": "^3.13.11",
+    "alpinejs": "^3.14.9",
+    "astro": "^5.5.4",
+    "astro-icon": "^1.1.5",
+    "tailwindcss": "^4.0.15"
   }
 }
